Updated the settings.csv and .txt files with the new vars for the loneliness and social isolation scenario runs. Also wrote a utilities function in R for collating detailed output files, and some more variable checking in the R working scripts. Also imputed some things in kludge.do, and need to investigate why lnly values are not being imputed properly

--- a/FEM_R/Loneliness_Social_Isolation/PAPER_WORKING_SCRIPT.Rmd
+++ b/FEM_R/Loneliness_Social_Isolation/PAPER_WORKING_SCRIPT.Rmd
@@ -57,7 +57,7 @@ source('FEM_R/utilities.R')
 
 ```{r}
 ## Directories
-base_output_dir <- "output/LNLY_SOCISO/"
+base_output_dir <- "output/LNLY_SOCISO_TEST/"
 input_dir <- "input_data/"
 
 ## Inputs
@@ -502,4 +502,8 @@ diseaseFreeLifeYearsComp(cohort_full, no.lnly.sociso, 'No Loneliness OR Social I
 
 
 
+
+```{r}
+
+```
 
