Added a title to a section in Rmd

--- a/FEM_R/Loneliness_Social_Isolation/PAPER_WORKING_SCRIPT.Rmd
+++ b/FEM_R/Loneliness_Social_Isolation/PAPER_WORKING_SCRIPT.Rmd
@@ -488,6 +488,7 @@ disabilityFreeLifeYearsComp(cohort_full, no.sociso, 'No Social Isolation')
 disabilityFreeLifeYearsComp(cohort_full, no.lnly.sociso, 'No Loneliness OR Social Isolation')
 ```
 
+#### Disease Free Life Years
 ```{r}
 diseaseFreeLifeYearsComp(cohort_full, no.lonely, 'No Loneliness')
 diseaseFreeLifeYearsComp(cohort_full, no.sociso, 'No Social Isolation')
